--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Final Reaponcive</title>
-  <link rel="stylesheet" href="./Src/css/style.css">
+  <link rel="stylesheet" href="./Src/css/minify/style.min.css">
 </head>
 
 <body>
